<resources>
    <string name="app_name">Pausi</string>
    <string name="facebook_app_id">586697575093738</string>
    <string name="fb_login_protocol_scheme">fb586697575093738</string>
    <string name="by_signing_up_you_agree_to_our_user_agreement_privacy_policy_and_draw_terms_conditions"><![CDATA[By signing up you agree to our User Agreement,Privacy Policy and Draw Terms & Conditions]]></string>
    <string name="terms_service"><![CDATA[Terms & Service]]></string>
    <string name="house_hunting_with_anybody_else_friend_them_to_boost_your_search">House hunting with anybody else? Friend them to boost your search.</string>
    <string name="apartment">Apartment</string>
    <string name="rent">Rent</string>
    <string name="kitchen">Kitchen</string>
    <string name="dining">Dining</string>
    <string name="parking">Parking</string>
    <string name="study">Study</string>
    <string name="external_garage">External Garage</string>
    <string name="can_not_be_empty">Can\'t Be Empty</string>
    <string name="please_select_img">Please select image</string>
    <string name="no_internal_connection">No Internet Connection</string>
    <string name="donothaveinternet">You don\'t have internet connection.</string>
    <string name="piximagepicker">Approve permissions to open Pix ImagePicker</string>
    <string name="property_added">Property Add Successfully!</string>
    <string name="server_problem">Server Problem Please try Next time...!</string>
    <string name="agentsince">Agent Since</string>
    <string name="plz_select_profile_image">Please select Profile Image</string>
    <string name="pz_select_id_proof">Please select ID Proof Image</string>
    <string name="pz_check_agreement">Please Check Our Agreement of Register</string>
    <string name="please_wait">Please wait..</string>
    <string name="account_created">Account Created</string>
    <string name="could_not_create_account">Could not create account. Please try again</string>
    <string name="msg_cant_be_empty">Message Can\'t Be Empty</string>
    <string name="property_id_not_found">Property Id not found</string>
    <string name="property_update">Property Update Successfully!</string>
    <string name="pass_sent">Password Sent To Email Successfully</string>
    <string name="xaf">XAF</string>
    <string name="beds">Beds .</string>
    <string name="baths">Baths .</string>
    <string name="acres">Acres .</string>
    <string name="m2">m2</string>
    <string name="unfavourite">Unfavourite</string>
    <string name="areyousure">Do You Want to exit..?</string>
    <string name="loginfailed">Login Failed</string>
    <string name="signinerroer">sign in error</string>
    <string name="accountcreated">Account Created</string>
    <string name="accountnotcreated">Could not create account. Please try again</string>
    <string name="propertystatusupdated">Property Status Updated Successfully</string>
    <string name="turnoffnoti">Turn off notifications</string>
    <string name="notifyme">Notify me for latest updates</string>
    <string name="ifound">I found</string>
    <string name="learnmore">on Pausi and would like to learn more about it. Thanks!</string>
    <string name="fav">Favourite</string>
    <string name="sharedummy">Hey, This is dummy text to share</string>
    <string name="agent">AGENT</string>
    <string name="logout">Logout Successfully</string>
    <string name="passmismatch">Password Mismatch</string>
    <string name="checkregiasteragree">Please Check Our Agreement of Register</string>
    <string name="infoupdate">User Info Update Successfully</string>
    <string name="passupdate">Password Update Successfully</string>
    <string name="zipupdate">Zip Code Updated Successfully</string>
    <string name="wallnotfound">Wallpaper Not Found</string>
    <string name="weltext">Keep track of your favorite homes</string>
    <string name="weltext2">Share homes with your friends or agent</string>
    <string name="weltext3">Save your favorite searches</string>
    <string name="weltext4">View full property history</string>
    <string name="weltext5">Follow homes to get notified of price changes</string>
    <string name="add_property">Add Property</string>
    <string name="edit_agent_profile">Edit Agent Profile</string>
    <string name="get_affordable">Get affordable</string>
    <string name="agent_since_2018">Agent Since 2018</string>
    <string name="save">Save</string>
    <string name="other_agents_and_your_clients_will_see_your_profile_when_they_use_pausi">Other agents and your clients will see your profile when they use Pausi.</string>
    <string name="add_photo">Add Photo</string>
    <string name="attach_id_proof">ATTACH ID PROOF</string>
    <string name="attach_your_id_proof_for_your_identification">Attach your id proof for your identification</string>
    <string name="email">Email</string>
    <string name="close">Close</string>
    <string name="jhon_sena">JHON SENA</string>
    <string name="type_message_here">Type message here....</string>
    <string name="dummy_name">Dummy name</string>
    <string name="slide_up_for_more_details">Slide up for more details!</string>
    <string name="est_mortgage_123">Est. Mortgage: $123</string>
    <string name="_113">$113</string>
    <string name="indore_madhya_pradesh">Indore, Madhya Pradesh</string>
    <string name="_3">3</string>
    <string name="photos">PHOTOS</string>
    <string name="_5">5</string>
    <string name="sq_ft_m2">SQ FT(m2)</string>
    <string name="year_built">YEAR BUILT</string>
    <string name="descriptions">Descriptions:</string>
    <string name="ask_the_listing_agent">ASK THE LISTING AGENT</string>
    <string name="listing_agent">LISTING AGENT</string>
    <string name="this_is_a_dummy_data">This is a dummy data</string>
    <string name="phone_number_optional">Phone number (optional)</string>
    <string name="phone_number">Phone Number</string>
    <string name="ask_question">ASK QUESTION</string>
    <string name="notify_me_for_latest_updates">Notify me for latest updates</string>
    <string name="similar_listings">SIMILAR LISTINGS</string>
    <string name="edit_property">Edit Property</string>
    <string name="property_title">Property Title</string>
    <string name="title">Title</string>
    <string name="property_for">Property for</string>
    <string name="available">Available</string>
    <string name="address">Address</string>
    <string name="address_2">Address 2</string>
    <string name="search_for_street_area_landmark">Search for street/area/landmark</string>
    <string name="property_details">Property Details</string>
    <string name="property_type">Property Type</string>
    <string name="no_of_bed">No. of bed</string>
    <string name="total_beds">Total beds</string>
    <string name="no_of_bath">No. of bath</string>
    <string name="total_bath">Total bath</string>
    <string name="size_m2">Size (m2)</string>
    <string name="size">Size</string>
    <string name="built_in">Built in</string>
    <string name="year">Year</string>
    <string name="total_cost">Total Cost</string>
    <string name="description">Description</string>
    <string name="write_here">Write here...</string>
    <string name="property_images">Property Images</string>
    <string name="submit">Submit</string>
    <string name="filter_homes">Filter Homes</string>
    <string name="for_rent">For Rent</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="my_favorites">My Favorites</string>
    <string name="login_to_get_a_more_personalised_experience">Login to get a more personalised experience</string>
    <string name="login_with">Login with</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>
    <string name="user_information">USER INFORMATION</string>
    <string name="name">Name:</string>
    <string name="jhon_gmail_com">Jhon@gmail.com</string>
    <string name="update_my_info">UPDATE MY INFO</string>
    <string name="update_city_or_town">UPDATE CITY OR TOWN</string>
    <string name="options">OPTIONS</string>
    <string name="share_photos_anonymously">Share Photos Anonymously</string>
    <string name="notifications">Notifications</string>
    <string name="my_payments_methods">My Payments Methods</string>
    <string name="i_m_a_real_estate_agent">I\'M A REAL ESTATE AGENT</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="follow">Follow</string>
    <string name="rate">Rate</string>
    <string name="version_0_00_0_00_00">Version 1.00</string>
    <string name="privacy_policy">PRIVACY POLICY</string>
    <string name="terms_of_service">TERMS OF SERVICE</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="one_more_step">One more step</string>
    <string name="create_account">Create Account</string>
    <string name="country">Country</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="register">Register</string>
    <string name="update_info">Update Info</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="your_info">YOUR INFO</string>
    <string name="email_addresss">Email addresss</string>
    <string name="phone">Phone</string>
    <string name="update_profile_info">UPDATE PROFILE INFO</string>
    <string name="update_password_optional">UPDATE PASSWORD (OPTIONAL)</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_re_enter_new_password">Confirm (re-enter new password)</string>
    <string name="update_password">UPDATE PASSWORD</string>
    <string name="enter_city_or_town">Enter City or Town</string>
    <string name="update">Update</string>
    <string name="choose_wallpaper">Choose Wallpaper</string>
    <string name="get_started">Get Started</string>
    <string name="_00_deals">00+ Deals</string>
    <string name="do_you_want_to_clear_chat">Do you want to clear chat?</string>
    <string name="send_in_message">Send in message</string>
    <string name="unfavorite">Unfavorite</string>
    <string name="share">Share</string>
    <string name="_00k">$00K</string>
    <string name="to">to</string>
    <string name="hi_how_are_you">Hi, How are you</string>
    <string name="address_city_school">address,city,school....</string>
    <string name="filter">Filter</string>
    <string name="cancel_drawing">Cancel Drawing</string>
    <string name="zoom_out_to_see_snaps">ZOOM OUT TO SEE SNAPS</string>
    <string name="zoom_in_to_see_all_homes">ZOOM IN TO SEE ALL HOMES</string>
    <string name="or_tab_the_search_icon">OR , TAB THE SEARCH ICON</string>
    <string name="schools_layer_on">Schools Layer On</string>
    <string name="move_the_map_to">Move the map to</string>
    <string name="explore_schools">explore schools.</string>
    <string name="ok">Ok</string>
    <string name="remove_attachment">Remove Attachment</string>
    <string name="broker">Broker</string>
    <string name="invite">Invite</string>
    <string name="friends">Friends</string>
    <string name="more">More</string>
    <string name="welcome_to_pausi">Welcome to Pausi</string>
    <string name="to_go_for_pausi_setting">To go for pausi setting</string>
    <string name="tab">Tab</string>
    <string name="to_more_options">To more options</string>
    <string name="my_shortcuts">MY SHORTCUTS</string>
    <string name="my_property">My Property</string>
    <string name="view_favorites">View Favorites</string>
    <string name="change_profile_image">Change Profile Image</string>
    <string name="change_wallpaper">Change Wallpaper</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
</resources>