<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/my_property_fav_text"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="5dp"
            style="@style/Base.TextAppearance.AppCompat.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_property"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/view_fav_text"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="5dp"
            style="@style/Base.TextAppearance.AppCompat.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_favorites"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/change_profile_image_text"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            style="@style/Base.TextAppearance.AppCompat.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_profile_image"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/change_wallpaper_text"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="15dp"
            style="@style/Base.TextAppearance.AppCompat.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_wallpaper"
            android:textColor="@color/colorBlack"/>

    </LinearLayout>

</RelativeLayout>