<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.UpdateMyInfoActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/upinfo_back"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:src="@drawable/back2" />

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="25dp"
                android:layout_toRightOf="@+id/upinfo_back"
                android:text="@string/update_info"
                android:textColor="@color/colorbtn" />


        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:weightSum="2">


                        <EditText
                            android:id="@+id/update_fname_edittext"
                            style="@style/Base.TextAppearance.AppCompat.Small"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/first_name"
                            android:inputType="textPersonName"
                            android:textColor="@color/colorBlack" />

                        <EditText
                            android:id="@+id/update_lanme_edittext"
                            style="@style/Base.TextAppearance.AppCompat.Small"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/last_name"
                            android:inputType="textPersonName"
                            android:textColor="@color/colorBlack" />

                    </LinearLayout>


                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/your_info"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="7dp"
                        android:background="#d5d9dc" />

                    <EditText
                        android:id="@+id/update_email_edittext"
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:hint="@string/email_addresss"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorBlack" />

                    <EditText
                        android:id="@+id/update_phone_edittext"
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone"
                        android:inputType="number"
                        android:textColor="@color/colorBlack" />


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/update_profile_info_btn"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="260dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn2"
                android:text="@string/update_profile_info"
                android:textColor="@color/colorWhite" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/me_frag_name_textview"
                        style="@style/Base.TextAppearance.AppCompat.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/update_password_optional"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="7dp"
                        android:background="#d5d9dc" />

                    <EditText
                        android:id="@+id/update_old_pass_edittext"
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/old_password"
                        android:inputType="textPassword"
                        android:textColor="@color/colorBlack" />

                    <EditText
                        android:id="@+id/update_new_pass_edittext"
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/new_password"
                        android:inputType="textPassword"
                        android:textColor="@color/colorBlack" />


                    <EditText
                        android:id="@+id/update_cpassword_edittext"
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_re_enter_new_password"
                        android:inputType="textPassword"
                        android:textColor="@color/colorBlack" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/update_password_btn"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="260dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn2"
                android:text="@string/update_password"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

    </ScrollView>
</RelativeLayout>