<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".Activity.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/login_textview"
                    style="@style/Base.TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/login"
                    android:textColor="@color/colorBlack" />

                <Button
                    android:id="@+id/signup_real_state_btn"
                    android:layout_width="240dp"
                    android:layout_height="40dp"
                    android:layout_gravity="left"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/btn2"
                    android:text="@string/i_m_a_real_estate_agent"
                    android:textColor="@color/colorWhite"/>


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/logo" />

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/create_account"
                    android:textColor="@color/colorBlack"
                    android:textSize="10pt" />


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/signup_email_edittext"
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_addresss"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorBlack" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/signup_password_edittext"
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="@color/colorBlack" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/signup_cpassword_edittext"
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:textColor="@color/colorBlack" />
                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/signup_btn"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:background="@color/colorbtn"
                    android:text="@string/one_more_step"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite" />


            </LinearLayout>


        </RelativeLayout>

    </ScrollView>


</RelativeLayout>