<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fav_send_in_message_text"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_in_message"
            android:gravity="left"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/fav_unfav_text"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unfavorite"
            android:gravity="left"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/fav_share_text"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:gravity="left"
            android:textColor="@color/colorBlack"/>

    </LinearLayout>

</RelativeLayout>